--- a/FNAEngine2D/Resource.resx
+++ b/FNAEngine2D/Resource.resx
@@ -118,7 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="empty_sfx" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\empty_sfx.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="pixelBin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\pixel.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="pixel_magenta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\pixel_magenta.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
