--- a/FNAEngine2D/Resource.resx
+++ b/FNAEngine2D/Resource.resx
@@ -130,4 +130,7 @@
   <data name="pixel_magenta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\pixel_magenta.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Roboto_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Roboto-Regular.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
