--- a/FNAEngine2D/Resource.resx
+++ b/FNAEngine2D/Resource.resx
@@ -127,6 +127,9 @@
   <data name="imgDelete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\imgDelete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="particule" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\particule.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="pixel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\pixel.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
